--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="profile.png" alt="">
             </div>
             <div class="right-col">
-                <h1>Hi! I am Sujan Tamang,<br><span class="auto"></span></h1>
+                <h1>Hi! I am Sujan,<br><span class="auto"></span></h1>
                 <p>I am curently studing in Khwopa Secondary School in grade XII.I have choosen Computer-Science and practising Website Designing.</p>
 
                 <div class="socialmedia">
