--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/skins/color1.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="skins/color1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style-switcher.css">
+    <link rel="stylesheet" href="style-switcher.css">
 </head>
 <body>
 <!-- Main container start -->
@@ -430,7 +430,7 @@
         <!-- style switcher end-->
          <!-- javascript -->
          <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
-        <script src="js/script.js"></script>
-        <script src="js/style-switcher.js"></script>
+        <script src="script.js"></script>
+        <script src="style-switcher.js"></script>
     </body>
     </html>
