--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suzan-Yba WebsiteDesign</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="skins/color1.css">
+    <link rel="stylesheet" href="color1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style-switcher.css">
 </head>
