--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="#contact" class="btn hire-me">Wanna Know me?</a>
                     </div>
                     <div class="home-img padd-15">
-                        <img src="images/hero.png" alt="">
+                        <img src="hero.png" alt="">
                     </div>
                 </div>
              </div>   
@@ -316,7 +316,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/portfolio1.jpg" alt="" srcset="">
+                                    <img src="portfolio1.jpg" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
@@ -325,7 +325,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/portfolio2.jpg" alt="" srcset="">
+                                    <img src="portfolio2.jpg" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
@@ -334,7 +334,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/portfolio3.jpg" alt="" srcset="">
+                                    <img src="portfolio3.jpg" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
@@ -343,7 +343,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/portfolio4.jpg" alt="" srcset="">
+                                    <img src="portfolio4.jpg" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/portfolio5.jpg" alt="" srcset="">
+                                    <img src="portfolio5.jpg" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
@@ -361,7 +361,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/portfolio6.jpg" alt="" srcset="">
+                                    <img src="portfolio6.jpg" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
